--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "NASA Mission Control API",
   "main": "src/server.js",
-  "type": "module",
   "scripts": {
     "test": "jest --detectOpenHandles",
     "test-watch": "jest --watch",
@@ -11,7 +10,7 @@
     "start": "node src/server.js",
     "cluster": "pm2 start src/server.js -i max",
     "kill-all-clusters": "pm2 delete all",
-    "lint": "eslint"
+    "lint-fix": "eslint --fix ./*.js"
   },
   "keywords": [],
   "author": "",
@@ -42,6 +41,10 @@
   },
   "devDependencies": {
     "eslint": "^8.7.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-config-node": "^4.1.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-node": "^11.1.0",
     "jest": "^26.6.3",
     "nodemon": "^2.0.15",
     "supertest": "^6.2.2"
